<resources>
    <string name="app_name">Aquarium</string>
    <string name="title_activity_webview">Meet The Fish</string>
    <string name="title_activity_settings">Manage The Tank</string>
    <string name="title_activity_lightsview">Manage The Lights</string>
    <string name="button_title_moon">Moon Light</string>
    <string name="button_title_sunset">Sunset</string>
    <string name="button_title_brightsun">Bright Sun</string>
    <string name="button_title_cloudy">Cloudy</string>
    <string name="button_title_resetprogram">Reset</string>
    <string name="textview_resetprogram">Reset Prog</string>
    <string name="button_title_all_lights">All Lights</string>
    <string name="button_title_day_lights">Day Lights</string>
    <string name="button_title_uv_lights">UV Lights</string>
    <string name="textview_set_brightness">Set Tank Brightness</string>
    <string name="textview_temp_right_string">Right Temperature</string>
    <string name="textview_temp_left_string">Left Temperature</string>
    <string name="textview_sunrise">Sunrise:</string>
    <string name="textview_sunset">Sunset:</string>
    <string name="textview_moonphase">Moonphase:</string>
    <string name="textview_pump_state">Pump State</string>
    <string name="textview_heater_state">Heater State</string>
    <string name="textview_light_state">System Is</string>
    <string name="button_change_water">Change the Water</string>
    <string name="textview_water_level_string">Water Level</string>
    <string name="button_change_the_filter">Change the Filter</string>
    <string name="togglebutton_cloudy">Cloudy</string>
    <string name="togglebutton_sunny">Sunny</string>
    <string name="textview_text_color">LED Color (RGB)</string>
    <string name="textview_red">Red</string>
    <string name="textview_green">Green</string>
    <string name="textview_blue">Blue</string>
</resources>
