<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.home.pete.aquarium.LightsActivity">

    <SeekBar
        android:id="@+id/seekBar_brightness"
        android:layout_width="500dp"
        android:layout_height="50dp"
        tools:layout_editor_absoluteX="214dp"
        tools:layout_editor_absoluteY="234dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="150dp" />

    <ToggleButton
        android:id="@+id/toggleButton_UVLights"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="16dp"
        android:onClick="toggleUV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_UVLights"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="89dp" />

    <ToggleButton
        android:id="@+id/toggleButton_dayLights"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:onClick="toggleSunLights"
        app:layout_constraintStart_toEndOf="@+id/toggleButton_UVLights"
        app:layout_constraintTop_toBottomOf="@+id/textView_dayLights"
        tools:layout_editor_absoluteX="214dp"
        tools:layout_editor_absoluteY="94dp" />

    <TextView
        android:id="@+id/textView_UVLights"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="32dp"
        android:foregroundGravity="center_vertical|center_horizontal"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/button_title_uv_lights"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="47dp" />

    <TextView
        android:id="@+id/textView_dayLights"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:foregroundGravity="center"
        android:gravity="center_vertical|center_horizontal"
        android:text="Day Lights"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/textView_UVLights"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="237dp"
        tools:layout_editor_absoluteY="42dp" />

    <TextView
        android:id="@+id/textView_setBrightness"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="150dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/textview_set_brightness"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/seekBar_brightness"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="367dp"
        tools:layout_editor_absoluteY="282dp" />

    <TextView
        android:id="@+id/textView_allLights"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/button_title_all_lights"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/textView_dayLights"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="598dp"
        tools:layout_editor_absoluteY="50dp" />

    <ToggleButton
        android:id="@+id/toggleButton_allLights"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:onClick="toggleAllLights"
        app:layout_constraintStart_toEndOf="@+id/toggleButton_dayLights"
        app:layout_constraintTop_toBottomOf="@+id/textView_allLights"
        tools:layout_editor_absoluteX="598dp"
        tools:layout_editor_absoluteY="178dp" />

    <TextView
        android:id="@+id/textView_resetProgram"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/textview_resetprogram"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/textView_allLights"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="616dp"
        tools:layout_editor_absoluteY="42dp" />

    <Button
        android:id="@+id/button_reset"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:onClick="restartLightProgram"
        android:text="@string/button_title_resetprogram"
        app:layout_constraintStart_toEndOf="@+id/toggleButton_allLights"
        app:layout_constraintTop_toBottomOf="@+id/textView_resetProgram"
        tools:layout_editor_absoluteX="630dp"
        tools:layout_editor_absoluteY="80dp" />

    <ToggleButton
        android:id="@+id/toggleButton_cloudy"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:onClick="setToCloudy"
        android:text="ToggleButton"
        android:textOff="@string/togglebutton_sunny"
        android:textOn="@string/togglebutton_cloudy"
        tools:layout_editor_absoluteX="234dp"
        tools:layout_editor_absoluteY="162dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="52dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="516dp"
        tools:text="@string/textview_red"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="516dp"
        tools:layout_editor_absoluteY="244dp"
        tools:text="@string/textview_green"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="516dp"
        tools:layout_editor_absoluteY="278dp"
        tools:text="@string/textview_blue"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textview_red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:layout_editor_absoluteX="578dp"
        tools:layout_editor_absoluteY="218dp" />

    <TextView
        android:id="@+id/textview_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textview_red"
        tools:layout_editor_absoluteX="578dp"
        tools:layout_editor_absoluteY="244dp" />

    <TextView
        android:id="@+id/textview_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textview_green"
        tools:layout_editor_absoluteX="578dp"
        tools:layout_editor_absoluteY="278dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="430dp"
        tools:layout_editor_absoluteY="149dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/toggleButton_allLights"
        android:layout_marginEnd="85dp"
        app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>
