<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.home.pete.aquarium.SettingsActivity">

    <Button
        android:id="@+id/button_changeFilter"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="53dp"
        android:onClick="changeFilter"
        android:text="@string/button_change_the_filter"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="HardcodedText"
        tools:layout_editor_absoluteX="532dp"
        tools:layout_editor_absoluteY="164dp"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toEndOf="@+id/textView_sunrise_value" />

    <ToggleButton
        android:id="@+id/toggle_LightState"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:onClick="toggleSystem"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/toggle_HeaterState"
        app:layout_constraintTop_toBottomOf="@+id/textView_LightState"
        tools:ignore="HardcodedText" />

    <ToggleButton
        android:id="@+id/toggle_PumpState"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="8dp"
        android:onClick="togglePump"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_PumpState"
        tools:layout_editor_absoluteX="103dp"
        tools:layout_editor_absoluteY="55dp" />

    <ToggleButton
        android:id="@+id/toggle_HeaterState"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:onClick="toggleHeater"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/toggle_PumpState"
        app:layout_constraintTop_toBottomOf="@+id/textView_HeaterState"
        tools:layout_editor_absoluteX="260dp"
        tools:layout_editor_absoluteY="55dp" />

    <TextView
        android:id="@+id/textView_PumpState"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="32dp"
        android:gravity="center_horizontal"
        android:text="@string/textview_pump_state"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="103dp"
        tools:layout_editor_absoluteY="30dp" />

    <TextView
        android:id="@+id/textView_HeaterState"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:gravity="center_horizontal"
        android:text="@string/textview_heater_state"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/textView_PumpState"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="282dp"
        tools:layout_editor_absoluteY="34dp" />

    <TextView
        android:id="@+id/textView_LightState"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:gravity="center_horizontal"
        android:text="@string/textview_light_state"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/textView_HeaterState"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="435dp"
        tools:layout_editor_absoluteY="32dp" />

    <TextView
        android:id="@+id/textView_TempRightString"
        android:layout_width="200dp"
        android:layout_height="32dp"
        android:layout_marginTop="32dp"
        android:gravity="center_horizontal"
        android:text="@string/textview_temp_right_string"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@+id/toggle_HeaterState"
        tools:layout_editor_absoluteX="300dp"
        tools:layout_editor_absoluteY="176dp"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toEndOf="@+id/textView_TempLeftString" />

    <Button
        android:id="@+id/button_ChangeWater"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="53dp"
        android:layout_marginStart="68dp"
        android:onClick="changeWater"
        android:text="@string/button_change_water"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="79dp"
        tools:layout_editor_absoluteY="289dp" />

    <TextView
        android:id="@+id/textView_WaterLevelString"
        android:layout_width="200dp"
        android:layout_height="32dp"
        android:layout_marginTop="32dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/textview_water_level_string"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/toggle_LightState"
        tools:layout_editor_absoluteX="532dp"
        tools:layout_editor_absoluteY="164dp"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toEndOf="@+id/textView_TempRightString" />

    <TextView
        android:id="@+id/textView_WaterLevel"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@+id/textView_WaterLevelString"
        tools:layout_editor_absoluteX="532dp"
        tools:layout_editor_absoluteY="208dp"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toEndOf="@+id/textView_TempRight" />

    <TextView
        android:id="@+id/textView_sunrise"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="32dp"
        android:gravity="right|center_vertical"
        android:text="@string/textview_sunrise"
        android:textAlignment="textStart"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView_sunset"
        app:layout_constraintStart_toEndOf="@+id/button_ChangeWater"
        tools:layout_editor_absoluteX="355dp"
        tools:layout_editor_absoluteY="302dp" />

    <TextView
        android:id="@+id/textView_sunset"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="32dp"
        android:gravity="right|center_vertical"
        android:text="@string/textview_sunset"
        android:textAlignment="textStart"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView_moonPhase"
        app:layout_constraintStart_toEndOf="@+id/button_ChangeWater"
        tools:layout_editor_absoluteX="355dp"
        tools:layout_editor_absoluteY="334dp" />

    <TextView
        android:id="@+id/textView_moonPhase"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="32dp"
        android:gravity="right|center_vertical"
        android:text="@string/textview_moonphase"
        android:textAlignment="textStart"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_ChangeWater"
        tools:layout_editor_absoluteX="300dp"
        tools:layout_editor_absoluteY="354dp" />

    <TextView
        android:id="@+id/textView_TempRight"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical|center_horizontal"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/textView_TempLeft"
        app:layout_constraintTop_toBottomOf="@+id/textView_TempRightString"
        tools:layout_editor_absoluteX="300dp"
        tools:layout_editor_absoluteY="248dp" />

    <TextView
        android:id="@+id/textView_TempLeftString"
        android:layout_width="200dp"
        android:layout_height="32dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="32dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/textview_temp_left_string"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggle_PumpState"
        tools:layout_editor_absoluteX="68dp"
        tools:layout_editor_absoluteY="180dp" />

    <TextView
        android:id="@+id/textView_TempLeft"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical|center_horizontal"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_TempLeftString"
        tools:layout_editor_absoluteX="57dp"
        tools:layout_editor_absoluteY="239dp" />

    <TextView
        android:id="@+id/textView_sunrise_value"
        android:layout_width="82dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="8dp"
        android:gravity="right|center_vertical"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView_sunset_value"
        app:layout_constraintStart_toEndOf="@+id/textView_sunrise"
        tools:layout_editor_absoluteX="423dp"
        tools:layout_editor_absoluteY="319dp" />

    <TextView
        android:id="@+id/textView_sunset_value"
        android:layout_width="82dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="8dp"
        android:gravity="right|center_vertical"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView_moonphase_value"
        app:layout_constraintStart_toEndOf="@+id/textView_sunset"
        tools:layout_editor_absoluteX="418dp"
        tools:layout_editor_absoluteY="359dp" />

    <TextView
        android:id="@+id/textView_moonphase_value"
        android:layout_width="82dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="8dp"
        android:gravity="right|center_vertical"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_moonPhase"
        tools:layout_editor_absoluteX="418dp"
        tools:layout_editor_absoluteY="393dp" />

</android.support.constraint.ConstraintLayout>
